--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
 
-__pycache__/Action.cpython-36.pyc
-__pycache__/Load.cpython-36.pyc
-__pycache__/Player.cpython-36.pyc
-__pycache__/Room.cpython-36.pyc
-__pycache__/Struktura.cpython-36.pyc
+*.pyc
